fix custombutton blue background contrast ratio

--- a/src/components/CustomButton/CustomButton.styles.scss
+++ b/src/components/CustomButton/CustomButton.styles.scss
@@ -4,7 +4,7 @@
   align-items: center;
   height: 4rem;
   width: 100%;
-  background-color: var(--color-main);
+  background-color: var(--color-main-dark);
   border: none;
   cursor: pointer;
   border-radius: 0.25rem;
