--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@
   --color-dark-background: #1f1f1f;
   --color-dark-slate-background: #2a3443;
   --color-dark-accent: #473f34;
+  --color-main-dark: #337c99;
   --color-main: #3d94b7;
   --color-main-light: #8ec4d9;
 }
